--- a/templates/login.html
+++ b/templates/login.html
@@ -105,7 +105,7 @@
         <h1 class="heading">Login - Security Solutions LLC</h1>
 
         <div class="login-form">
-            <form action="#" method="post">
+            <form action="/login" method="post">
                 <input type="text" name="username" placeholder="Username" required>
                 <input type="password" name="password" placeholder="Password" required>
                 <button type="submit">Login</button>
