--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -105,7 +105,7 @@
     <div class="content">
         <h1 class="heading">Sign Up - Security Solutions LLC</h1>
 
-        <div class="SignUp-form">
+        <div class="signup-form">
             <form action="/SignUp" method="post">
                 <input type="text" name="username" placeholder="Username" required>
                 <input type="password" name="password" placeholder="Password" required>
