--- a/templates/login.html
+++ b/templates/login.html
@@ -102,7 +102,7 @@
     </div>
 
     <div class="content">
-        <h1 class="heading">Login - Security Solutions LLC</h1>
+        <h1 class="heading">QCareers Login</h1>
 
         <div class="login-form">
             <form action="/login" method="post">
@@ -110,6 +110,9 @@
                 <input type="password" name="password" placeholder="Password" required>
                 <button type="submit">Login</button>
             </form>
+            {% if error %}
+                <p style="color: red;">{{ error }}</p>
+            {% endif %}
             <p>Don't have an account? <a href="/SignUp">Sign Up</a></p>
         </div>
     </div>
