--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -103,7 +103,7 @@
     </div>
 
     <div class="content">
-        <h1 class="heading">Sign Up - Security Solutions LLC</h1>
+        <h1 class="heading">QCareers Sign Up</h1>
 
         <div class="signup-form">
             <form action="/SignUp" method="post">
