--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -113,6 +113,9 @@
                 <input type="text" name="fullname" placeholder="Full Name" required>
                 <button type="submit">Sign Up</button>
             </form>
+            {% if error %}
+                <p style="color: red;">{{ error }}</p>
+            {% endif %}
         </div>
     </div>
 
